# rust-chess

./: .gitignore  README.md
client/: Cargo.toml  Dioxus.toml  run.bash  run.bat  run.cmd
client/src/: data.rs  lib.rs  logic.rs  main.rs  style.css
server/: Cargo.toml
server/src/: data.rs  main.rs  specs.rs
